--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
-<!Doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>GWC Cold Call Tool</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+   <script src="js/tabletop.js"></script>
+   <script src="js/lookup.js"></script>
+       <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Girls Who Code Acronym Decoder</title>
 </head>
-
 <body>
-  <div class="container">
-    <div class="jumbotron">
-      <h1>GWC Cold Caller</h1>
-    </div>
-  </div>
+
+
+    <div class="container-narrow">
+
+      <hr>
+
+      <div class="jumbotron">
+        <h2>GWCCC: Girls Who Code Cold Caller</h2>
+        <br>
+        <p class="lead">
+              <input type=text placeholder="???" id="AcronymInput"><br />
+              <button id='random' class='btn btn-success'>Pick Someone!</button>
+      </p>
+
+
+      </div>
+      </div>
+
+      <hr>
+      <p class="footertext">Have a name to add? <a href="https://docs.google.com/a/girlswhocode.com/spreadsheets/d/1p1DUEkzQ6qIQvZRuTcxoSz_AKO6gUJfLWe4cDAxJ0IM/edit?usp=sharing" target="_blank">Add it here.</a></p>
+      <p class="footertext">Thanks to Jeff Stern for making the <a href="http://jeffstern.co/sites/gwcglossary/">GWCAD</a> from which I stole all this code</p>
+    </div> <!-- /container -->
 
 
 </body>
