--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
    <script src="js/lookup.js"></script>
        <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>Girls Who Code Acronym Decoder</title>
+    <title>Girls Who Code Cold Caller</title>
 </head>
 <body>
 
+  <div class="container-narrow">
 
-    <div class="container-narrow">
 
       <hr>
 
@@ -23,10 +23,8 @@
               <input type=text placeholder="???" id="AcronymInput"><br />
               <button id='random' class='btn btn-success'>Pick Someone!</button>
       </p>
-
-
       </div>
-      </div>
+    </div>
 
       <hr>
       <p class="footertext">Have a name to add? <a href="https://docs.google.com/a/girlswhocode.com/spreadsheets/d/1p1DUEkzQ6qIQvZRuTcxoSz_AKO6gUJfLWe4cDAxJ0IM/edit?usp=sharing" target="_blank">Add it here.</a></p>
