--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
         <h2>GWCCC: Girls Who Code Cold Caller</h2>
         <br>
         <p class="lead">
-              <input type=text placeholder="???" id="AcronymInput"><br />
+              <h1 id="AcronymInput"></h1><br />
               <button id='random' class='btn btn-success'>Pick Someone!</button>
+              <p />
+              <input type=text placeholder="Enter Google Sheet ID" id="SheetID">
+              <button id='newsheet' class='btn btn-success'>REFRESH</button>
+
       </p>
       </div>
     </div>
 
       <hr>
       <p class="footertext">Have a name to add? <a href="https://docs.google.com/a/girlswhocode.com/spreadsheets/d/1p1DUEkzQ6qIQvZRuTcxoSz_AKO6gUJfLWe4cDAxJ0IM/edit?usp=sharing" target="_blank">Add it here.</a></p>
-      <p class="footertext">Thanks to Jeff Stern for making the <a href="http://jeffstern.co/sites/gwcglossary/">GWCAD</a> from which I stole all this code</p>
+      <p class="footertext">Thanks to Jeff Stern from who I stole all this code</p>
     </div> <!-- /container -->
 
 
