Added Comma Separated Lists

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <h1 id="AcronymInput"></h1><br />
               <button id='random' class='btn btn-success'>Pick Someone!</button>
               <p />
-              <input type=text placeholder="Enter Google Sheet ID" id="SheetID">
+              <input type=text placeholder="Enter Comma-Separated List or Public Google Sheet URL" id="SheetID">
               <button id='newsheet' class='btn btn-success'>REFRESH</button>
 
       </p>
@@ -31,8 +31,7 @@
     </div>
 
       <hr>
-      <p class="footertext">Have a name to add? <a href="https://docs.google.com/a/girlswhocode.com/spreadsheets/d/1p1DUEkzQ6qIQvZRuTcxoSz_AKO6gUJfLWe4cDAxJ0IM/edit?usp=sharing" target="_blank">Add it here.</a></p>
-      <p class="footertext">Thanks to Jeff Stern from who I stole all this code</p>
+      <p class="footertext">By Ellen &amp; Jeff</p>
     </div> <!-- /container -->
 
 
