Cleared display on refresh

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>GWCCC: Girls Who Code Cold Caller</h2>
         <br>
         <p class="lead">
-              <h1 id="AcronymInput"></h1><br />
+              <h1 id="resultdisplay"></h1><br />
               <button id='random' class='btn btn-success'>Pick Someone!</button>
               <p />
               <input type=text placeholder="Enter Comma-Separated List or Public Google Sheet URL" id="SheetID">
